--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
             <div class="text-noti-down">Attiva notiche desktop</div>
           </div>
         </div>
-        <div class="search-bar"></div>
+        <div class="search-bar">
+          <button class="search-button">
+            <i class="fa-solid fa-magnifying-glass "></i>
+          </button>
+          <input type="text" class="text-search" placeholder="Cerca o inizia una nuova chat">
+        </div>
         <div class="contact-box"></div>
       </div>
       <div class="right-box"></div>
